--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "_mocha --compilers js:babel-core/register",
     "watch": "gulp",
     "outdated": "npm outdated --depth=0",
-    "install": "npm run compile"
+    "install": "npm install && npm run compile"
   },
   "keywords": [
     "loopback",
